--- a/SuffixTree/.classpath
+++ b/SuffixTree/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_181"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="core.jar"/>
+	<classpathentry kind="lib" path="jMusic1.6.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
